<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductHistoryActivity" >

   	<RelativeLayout
   	    android:layout_width="wrap_content"
   	    android:layout_height="match_parent"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin" >
    
	    <LinearLayout android:id="@+id/ProductHistoryActivity_filter_LinearLayout"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal" >
		    
		    <CheckBox android:id="@+id/ProductHistoryActivity_Production_CheckBox"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginRight="@dimen/HistoryActivity_MARGIN_HORIZONTAL"
		        android:text="@string/ProductHistoryActivity_Production_CheckBox"
		        android:checked="true" />
		    
	   	    <CheckBox android:id="@+id/ProductHistoryActivity_Repair_CheckBox"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginRight="@dimen/HistoryActivity_MARGIN_HORIZONTAL"
		        android:text="@string/ProductHistoryActivity_Repair_CheckBox"
		        android:checked="true" />
	   	    
	   	    <CheckBox android:id="@+id/ProductHistoryActivity_SpecChange_CheckBox"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginRight="@dimen/HistoryActivity_MARGIN_HORIZONTAL"
		        android:text="@string/ProductHistoryActivity_SpecChange_CheckBox"
		        android:checked="true" />
	   	    
	   	    <EditText android:id="@+id/ProductHistoryActivity_Search_EditText"
	   	        android:layout_width="@dimen/barcode_EditText_width"
	   	        android:layout_height="wrap_content"
		        android:layout_marginRight="@dimen/HistoryActivity_MARGIN_HORIZONTAL"
	   	        android:inputType="number" />
	   	    
	   	    <Button android:id="@+id/ProductHistoryActivity_Search_Button"
	   	        android:layout_width="wrap_content"
	   	        android:layout_height="wrap_content" 
	   	        android:text="@string/ProductHistoryActivity_Search_Button"
	   	        android:onClick="startNewProductSearch" />
		</LinearLayout>
		
	    <LinearLayout android:id="@+id/ProductHistoryActivity_fieldName_LinearLayout"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_below="@id/ProductHistoryActivity_filter_LinearLayout"
		    android:orientation="horizontal" >
		    <!-- 
		    android:focusable="true"
		    android:focusableInTouchMode="true"
		     -->
		    
	   	    <TextView 
	   	        android:layout_width="@dimen/ProductHistoryActivity_TextView_WIDTH_MEDIUM"
	   	        android:layout_height="wrap_content"
	   	        android:gravity="center"
	   	        android:text="@string/ProductHistoryActivity_TaskType_TextView"/>
		    <TextView 
		        android:layout_width="@dimen/ProductHistoryActivity_TextView_WIDTH_LONG"
	   	        android:layout_height="wrap_content"
	   	        android:gravity="center"
	   	        android:text="@string/ProductHistoryActivity_ProductBarcode_TextView"/>
		    <TextView 
	   	        android:layout_width="@dimen/ProductHistoryActivity_TextView_WIDTH_LONG"
	   	        android:layout_height="wrap_content"
	   	        android:gravity="center"
	   	        android:text="@string/ProductHistoryActivity_PartBarcode_TextView"/>
		    <TextView 
	   	        android:layout_width="@dimen/ProductHistoryActivity_TextView_WIDTH_LONG"
	   	        android:layout_height="wrap_content"
	   	        android:gravity="center"
	   	        android:text="@string/ProductHistoryActivity_TaskTime_TextView"/>
		    <TextView 
		        android:gravity="center"
		        android:layout_width="@dimen/ProductHistoryActivity_TextView_WIDTH_SHORT"
	   	        android:layout_height="wrap_content" 
	   	        android:text="@string/ProductHistoryActivity_Worker_TextView"/>
		</LinearLayout>
		
		<LinearLayout
		    android:layout_below="@id/ProductHistoryActivity_fieldName_LinearLayout"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal" >
		    <com.sbmkorea.plts.view.BottomHitDetectScrollView
		        android:id="@+id/ProductHistoryActivity_ScrollView"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content" >
				<LinearLayout android:id="@+id/ProductHistoryActivity_History_LinearLayout"
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content" 
				    android:orientation="vertical" >
				</LinearLayout>
			</com.sbmkorea.plts.view.BottomHitDetectScrollView>
		</LinearLayout>
	</RelativeLayout>		
</HorizontalScrollView>

