<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShipmentHistoryActivity" >

   	<RelativeLayout
   	    android:layout_width="600dp"
   	    android:layout_height="match_parent"
   	    android:paddingBottom="@dimen/activity_vertical_margin"
   	    android:paddingLeft="@dimen/activity_horizontal_margin"
   	    android:paddingRight="@dimen/activity_horizontal_margin"
   	    android:paddingTop="@dimen/activity_vertical_margin" >
    
	    <LinearLayout
	        android:id="@+id/ShipmentHistoryActivity_filter_LinearLayout"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/ShipmentHistoryActivity_fieldName_LinearLayout"
	        android:layout_alignParentRight="true"
	        android:orientation="horizontal" >

	        <TextView
	            android:id="@+id/textView1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="23dp"
	            android:layout_marginRight="18dp"
	            android:text="@string/ProductionShipmentActivity_Enterpriser" />

	        <Spinner
	            android:id="@+id/ShipmentHistory_Spinner_Enterpriser"
	            android:layout_width="@dimen/barcode_EditText_width"
	            android:layout_height="match_parent"
	            android:layout_marginRight="21dp"
	            android:ems="10"
	            android:inputType="text" />

	        <EditText
	            android:id="@+id/ShipmentHistoryActivity_Search_EditText"
	            android:layout_width="123dp"
	            android:layout_height="wrap_content"
	            android:layout_marginRight="@dimen/HistoryActivity_MARGIN_HORIZONTAL"
	            android:inputType="text" />

	        <Button
	            android:id="@+id/ShipmentHistoryActivity_Search_Button"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:onClick="startNewShipmentSearch"
	            android:text="@string/ShipmentHistoryActivity_Search_Button" />

	    </LinearLayout>
		
	    <LinearLayout
	        android:id="@+id/ShipmentHistoryActivity_fieldName_LinearLayout"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/ShipmentHistoryActivity_filter_LinearLayout"
	        android:orientation="horizontal" >

		    <!-- 
		    android:focusable="true"
		    android:focusableInTouchMode="true"
		     -->

	        <TextView
	            android:layout_width="69dp"
	            android:layout_height="wrap_content"
	            android:gravity="right"
	            android:text="@string/ShipmentHistoryActivity_Enterpriser_TextView" />

		    <TextView
		        android:layout_width="100dp"
		        android:layout_height="wrap_content"
		        android:gravity="right"
		        android:text="@string/ShipmentHistoryActivity_ShipmentBarcode_TextView" />

		    <TextView
		        android:layout_width="95dp"
		        android:layout_height="wrap_content"
		        android:gravity="right"
		        android:text="@string/ShipmentHistoryActivity_PartBarcode_TextView" />

		    <TextView
		        android:layout_width="170dp"
		        android:layout_height="wrap_content"
		        android:gravity="center"
		        android:text="@string/ShipmentHistoryActivity_TaskTime_TextView" />

		    <TextView
		        android:layout_width="50dp"
		        android:layout_height="wrap_content"
		        android:gravity="right"
		        android:text="@string/ShipmentHistoryActivity_Worker_TextView" />

		    <TextView
		        android:layout_width="85dp"
		        android:layout_height="wrap_content"
		        android:gravity="right"
		        android:text="@string/ShipmentHistoryActivity_etc_TextView" />

		</LinearLayout>
		
		<LinearLayout
		    android:layout_below="@id/ShipmentHistoryActivity_fieldName_LinearLayout"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal" >
		    <com.sbmkorea.plts.view.BottomHitDetectScrollView
		        android:id="@+id/ShipmentHistoryActivity_ScrollView"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content" >
				<LinearLayout android:id="@+id/ShipmentHistoryActivity_History_LinearLayout"
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content" 
				    android:orientation="vertical" >
				</LinearLayout>
			</com.sbmkorea.plts.view.BottomHitDetectScrollView>
		</LinearLayout>
	</RelativeLayout>		
</HorizontalScrollView>

