<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RepairMainActivity" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/bottom_bar_height" >
	       	<LinearLayout
	       	    android:layout_width="match_parent"
	       	    android:layout_height="wrap_content" 
	       	    android:orientation="vertical" > 
		       	<LinearLayout
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:orientation="vertical" >
		            <TextView
		                android:layout_width="match_parent"
		                android:layout_height="wrap_content"
		                android:layout_margin="@dimen/activity_margin"
		                android:layout_marginBottom="0dp"
		                android:text="@string/RepairMainActivity_activityDesc_product_TextView" />
		            
		            <EditText android:id="@+id/RepairMainActivity_product_EditText"
		                android:layout_width="match_parent"
		                android:layout_height="wrap_content"
		                android:layout_margin="@dimen/activity_margin"
		                android:layout_marginBottom="0dp"
		                android:inputType="number" />
		        </LinearLayout>
		        
		        <LinearLayout
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:orientation="vertical" >  	
		            <TextView
		                android:layout_width="match_parent"
		                android:layout_height="wrap_content"
		                android:layout_margin="@dimen/activity_margin"
		                android:layout_marginBottom="0dp"
		                android:text="@string/RepairMainActivity_activityDesc_part_TextView" />
		            
		            <EditText android:id="@+id/RepairMainActivity_part_EditText"
		                android:layout_width="match_parent"
		                android:layout_height="wrap_content"
		                android:layout_margin="@dimen/activity_margin"
		                android:layout_marginBottom="0dp"
		                android:inputType="number" />
		        </LinearLayout>
		        
		        <LinearLayout
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:orientation="vertical" >    
				   	<TextView
		                android:layout_width="match_parent"
		                android:layout_height="wrap_content"
		                android:layout_margin="@dimen/activity_margin"
		                android:layout_marginBottom="0dp"
		                android:text="@string/RepairMainActivity_errortype_TextView" />
		            
		            <Spinner android:id="@+id/RepairMainActivity_errortype_Spinner"
				     	android:layout_width="wrap_content"
						android:layout_height="wrap_content" />						
    			</LinearLayout>
	                 
			    <LinearLayout
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:orientation="vertical" >
			        <TextView
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:layout_margin="@dimen/activity_margin"
			            android:layout_marginBottom="0dp"
			            android:text="@string/RepairMainActivity_activityDesc_remarks_TextView" />
			        
			        <EditText android:id="@+id/RepairMainActivity_remarks_EditText"
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:layout_margin="@dimen/activity_margin"
			            android:layout_marginBottom="0dp"
			            android:inputType="text" />
			    </LinearLayout>
   	       	</LinearLayout>
    </ScrollView>

	<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_bar_height"
        android:layout_alignParentBottom="true" >
        
	    <ImageView android:id="@+id/RepairMainActivity_status_ImageView"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:contentDescription="@string/RepairMainActivity_status_ImageView" />
	    
        <Button android:id="@+id/RepairMainActivity_done_Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:text="@string/RepairMainActivity_done_Button"
            android:onClick="finishRepair" />
        
    </RelativeLayout>
</RelativeLayout>
